# redteam_llm_jobs

./: README.md  pyproject.toml  run_pipeline.py  scratch_test_professions.docx  test_run.py  test_职业_2.docx  数据生成智能体的整体流程_EN.docx  职业_仅保留职业名称.docx
examples/: redteam_job.example.json
output_test/: prof_8144ab0206_samples.jsonl  prof_a731d06d5f_samples.jsonl
src/redteam_professions/: __init__.py  bundle_builder.py  bundle_markdown.py  cli.py  docx_loader.py  exporter.py  job_spec.py  jsonl.py  judge.py  models.py  pipeline.py  professions.py  profile_builder.py  prompt_generation.py  prompt_generation_llm.py  text_utils.py
src/redteam_professions.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/redteam_professions/llm/: __init__.py  client.py  config.py
src/redteam_professions/prompts/: __init__.py  llm_legal_hooks_system_active_zh.txt  llm_legal_hooks_system_passive_zh.txt  llm_legal_hooks_user_active_zh.txt  llm_legal_hooks_user_passive_zh.txt  llm_short_question_system_active_zh.txt  llm_short_question_system_passive_zh.txt  llm_short_question_user_active_zh.txt  llm_short_question_user_passive_zh.txt
tests/: test_bundle_builder.py  test_bundle_markdown.py  test_docx_loader.py  test_job_spec.py  test_judge.py  test_llm_client.py  test_pipeline.py  test_prompt_generation.py  test_prompt_generation_llm.py
