[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "redteam-professions"
version = "0.1.0"
description = "Offline batch red-team prompt generator for profession datasets."
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "OpenAI Codex" }
]
dependencies = []

[project.optional-dependencies]
llm = [
  "httpx>=0.27",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
redteam_professions = ["prompts/*.txt"]
